--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   geocoder: ^0.2.1
   google_maps_flutter: ^2.0.3
   flutter_spinkit: ^5.0.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -37,5 +38,14 @@ flutter:
 
   assets:
    - images/
-  #   - images/a_dot_ham.jpeg
 
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Bold.ttf
+          weight: 700
+        - asset: fonts/Lato-Regular.ttf
+
+    - family: Anton
+      fonts:
+        - asset: fonts/Anton-Regular.ttf
