--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,17 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.0.0
-  firebase_auth: ^1.0.3
-  cloud_firestore: ^1.0.4
-  firebase_core: ^1.0.3
-  provider: ^5.0.0
+  firebase_auth: ^1.1.3
+  firebase_core: ^1.1.0
+  cloud_firestore: ^1.0.0
+  provider: ^4.3.3
   geolocator: ^7.0.1
   geocoder: ^0.2.1
   google_maps_flutter: ^2.0.3
   flutter_spinkit: ^5.0.0
   shared_preferences: ^2.0.5
+  carousel_slider: ^4.0.0-nullsafety.0
+  paginate_firestore: ^0.3.0
 
 dev_dependencies:
   flutter_test:
