--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   carousel_slider: ^4.0.0-nullsafety.0
   paginate_firestore: ^0.3.0
   persistent_bottom_nav_bar: ^4.0.2
+  url_launcher: ^6.0.6
+  map_launcher: ^2.0.0
 
 dev_dependencies:
   flutter_test:
