--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   url_launcher: ^6.0.6
   map_launcher: ^2.0.0
+  expandable_text: 2.2.0
+  flutter_easyloading: ^3.0.0
 
 dev_dependencies:
   flutter_test:
