--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   map_launcher: ^2.0.0
   expandable_text: 2.2.0
   flutter_easyloading: ^3.0.0
+  toggle_bar: ^1.0.0
 
 dev_dependencies:
   flutter_test:
