--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   expandable_text: 2.2.0
   flutter_easyloading: ^3.0.0
   toggle_bar: ^1.0.0
+  dotted_border: ^2.0.0
+  chips_choice: ^2.0.1
 
 dev_dependencies:
   flutter_test:
